spacing issue fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,8 @@ body {
     padding: 10px;
   }
 }
+
+p:has(br) {
+  line-height: 0;
+  margin: 0;
+}
